--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,27 @@
-/* space-mono-regular - latin */
 @font-face {
-  font-family: 'Space Mono';
+  font-family: "Space Mono";
   font-style: normal;
   font-weight: 400;
-  src: local(''),
-       url('../fonts/space-mono-v6-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('../fonts/space-mono-v6-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: url("../fonts/space-mono-v6-latin-regular.woff2") format("woff2"),
+       url("../fonts/space-mono-v6-latin-regular.woff") format("woff");
 }
-
-/* space-mono-700 - latin */
 @font-face {
-  font-family: 'Space Mono';
+  font-family: "Space Mono";
   font-style: normal;
   font-weight: 700;
-  src: local(''),
-       url('../fonts/space-mono-v6-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('../fonts/space-mono-v6-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: url("../fonts/space-mono-v6-latin-700.woff2") format("woff2"),
+       url("../fonts/space-mono-v6-latin-700.woff") format("woff");
 }
-/* lexend-deca-regular - latin */
 @font-face {
-  font-family: 'Lexend Deca';
+  font-family: "Lexend Deca";
   font-style: normal;
   font-weight: 400;
-  src: local(''),
-       url('../fonts/lexend-deca-v7-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('../fonts/lexend-deca-v7-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: url("../fonts/lexend-deca-v7-latin-regular.woff2") format("woff2"),
+       url("../fonts/lexend-deca-v7-latin-regular.woff") format("woff");
 }
 /*CUSTOM PROPERTIES*/
 :root {
-  --font-family: "Roboto", "Arial", sans-serif;
+  --font-family:  "Space Mono", monospace;
 }
 /* #BOX-SIZING */
 html {
@@ -71,9 +64,36 @@ body {
 
 /* CONTAINER */
 .container {
-  width: 1225px;
+  width: 1146px;
   padding-left: 20px;
   padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
+}
+/*SITE-HEADER*/
+.sitenav {
+  margin-top: 22px;
+  margin-bottom: 21px;
+}
+.sitenav__container {
+  display: flex;
+  align-items: center;
+}
+.sitenav__link {
+  margin-right: 58px;
+}
+.sitenav__logo,
+.site-footer__logo {
+  display: block;
+}
+.sitenav__list {
+  display: flex;
+  align-items: center;
+  padding: 14px 0;
+  margin: 0;
+  list-style-type: none;
+  margin-right: auto;
+}
+.sitenav__item {
+  margin-right: 32px;
 }
