--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,8 @@
 }
 /*CUSTOM PROPERTIES*/
 :root {
-  --font-family:  "Space Mono", monospace;
+  --font-family: "Lexend Deca", "Arial", sans-serif;
+  --font-family-space-mono: "Space Mono", monospace;
 }
 /* #BOX-SIZING */
 html {
@@ -29,10 +30,14 @@ html {
   scroll-behavior: smooth;
 }
 h1, h2, h3 {
+  font-family: var(--font-family-space-mono);
   margin: 0;
 }
 p {
   margin: 0;
+}
+a {
+  font-family: var(--font-family-space-mono);
 }
 *,
 *::before,
@@ -104,6 +109,7 @@ body {
   line-height: 25px;
   font-weight: 700;
   color: #939caa;
+  transition: color 0.2s linear;
 }
 .sitenav__link:hover {
   color: #fcb72b;
@@ -125,7 +131,55 @@ body {
   color: #fcb72b;
   background-color: #fff;
 }
+
+/*MAIN*/
+
+/*SCOOTER-SHARING SECTION*/
 .scooter-sharing {
-  height: 100vh;
-  background-color: tomato;
+  background-image: linear-gradient(rgba(47, 59, 89, 0.75), rgba(47, 59, 89, 0.75)),
+                    url("../images/site-hero-bg-scoot.png");
+  background-size: 100%,
+                   2610px 1740px;
+  background-repeat: repeat,
+                     no-repeat;
+  background-position: calc(50% + 310px) calc(50% - 430px);
+  padding-top: 153px;
+  padding-bottom: 153px;
+}
+.scooter-sharing__info-wrapper {
+  width: 500px;
+  color: #fff;
+}
+.scooter-sharing__heading {
+  font-size: 56px;
+  line-height: 56px;
+  letter-spacing: -2.5px;
+  margin-bottom: 40px;
+}
+
+.scooter-sharing__desc {
+  padding-left: 95px;
+  font-size: 15px;
+  line-height: 25px;
+  margin-bottom: 40px;
+}
+.scooter-sharing__button {
+  display: inline-block;
+  padding: 14px 19px;
+  color: #fff;
+  background-color: #fcb72b;
+  border: 3px solid transparent;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 25px;
+  transition: background-color 0.2s linear,
+              color 0.1s linear;
+
+  margin-left: 95px;
+}
+.scooter-sharing__button:hover {
+  border: 3px solid #fcb72b;
+  color: #fcb72b;
+  background-color: transparent;
 }
