--- a/css/styles.css
+++ b/css/styles.css
@@ -367,3 +367,95 @@ body {
   color: #fcb72b;
   background-color: transparent;
 }
+
+
+/*SITE-FOOTER*/
+.site-footer {
+  background-image: url("../images/site-footer-bg-circles.svg"),
+                    linear-gradient(rgba(47, 59, 89, 0.75), rgba(47, 59, 89, 0.75));
+  background-repeat: no-repeat,
+                     repeat;
+  background-size: 1153px 347px;
+  background-position: calc(50% + 300px) calc(50% + 110px);
+  padding-top: 102px;
+}
+/*.site-footer {
+  position: sticky;
+  bottom: 0;
+}*/
+.wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 102px;
+  
+}
+.site-footer__heading {
+  width: 415px;
+  font-size: 48px;
+  line-height: 48px;
+  letter-spacing: -2.14286px;
+  color: #fff;
+}
+.site-footer a {
+  text-decoration: none;
+}
+.site-footer__buttons {
+  display: flex;
+}
+.site-footer__button {
+  margin-left: 18px;
+}
+.site-footer__button__img {
+  display: block;
+}
+.site-footer__nav {
+  padding-top: 35px;
+  padding-bottom: 32px;
+  background-color: #333a44;
+}
+.site-footer__nav__container {
+  display: flex;
+  align-items: center;
+}
+.site-footer__list {
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  margin-right: auto;
+}
+.site-footer__item {
+  margin-right: 32px;
+}
+
+.site-footer__link {
+  text-decoration: none;
+  font-size: 15px;
+  line-height: 25px;
+  font-weight: 700;
+  color: #939caa;
+  transition: color 0.2s linear;
+}
+.site-footer__link:hover {
+  color: #fcb72b;
+}
+
+.site-footer__socials {
+  display: flex;
+  align-items: center;
+}
+.site-footer__socials__link {
+  margin-left: 24px;
+}
+.site-footer__socials__link svg {
+  display: block;
+}
+.site-footer__socials__link path {
+  transition: fill 0.2s linear;
+}
+.site-footer__socials__link:hover path {
+  fill: #e5ecf4;
+}
+
